Compiler/src/main/java/gen/languageParser.java
package gen;// Generated from /home/adam/Uczelnia/JFTT/L3/Compiler/src/main/language.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class languageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, COMMENT=2, IF=3, COMMA=4, NUM=5, LSQBRACKET=6, RSQBRACKET=7, SEMICOLON=8, 
		VAR=9, BEGIN=10, END=11, ASSIGN=12, ELSE=13, THEN=14, ENDIF=15, WHILE=16, 
		REPEAT=17, DO=18, ENDWHILE=19, UNTIL=20, FOR=21, FROM=22, DOWNTO=23, TO=24, 
		ENDFOR=25, READ=26, WRITE=27, PLUS=28, MINUS=29, DIV=30, TIMES=31, MOD=32, 
		EQ=33, NEQ=34, LE=35, GE=36, LEQ=37, GEQ=38, WHITESPACE=39, PIDENTIFIER=40, 
		CHARACTER=41;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_commands = 2, RULE_command = 3, 
		RULE_conditional = 4, RULE_expression = 5, RULE_condition = 6, RULE_value = 7, 
		RULE_identifier = 8, RULE_possibleWhitespace = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "commands", "command", "conditional", "expression", 
			"condition", "value", "identifier", "possibleWhitespace"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", null, "'IF'", "','", null, "'['", "']'", "';'", "'VAR'", 
			"'BEGIN'", "'END'", "'ASSIGN'", "'ELSE'", "'THEN'", "'ENDIF'", "'WHILE'", 
			"'REPEAT'", "'DO'", "'ENDWHILE'", "'UNTIL'", "'FOR'", "'FROM'", "'DOWNTO'", 
			"'TO'", "'ENDFOR'", "'READ'", "'WRITE'", "'PLUS'", "'MINUS'", "'DIV'", 
			"'TIMES'", "'MOD'", "'EQ'", "'NEQ'", "'LE'", "'GE'", "'LEQ'", "'GEQ'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "COMMENT", "IF", "COMMA", "NUM", "LSQBRACKET", "RSQBRACKET", 
			"SEMICOLON", "VAR", "BEGIN", "END", "ASSIGN", "ELSE", "THEN", "ENDIF", 
			"WHILE", "REPEAT", "DO", "ENDWHILE", "UNTIL", "FOR", "FROM", "DOWNTO", 
			"TO", "ENDFOR", "READ", "WRITE", "PLUS", "MINUS", "DIV", "TIMES", "MOD", 
			"EQ", "NEQ", "LE", "GE", "LEQ", "GEQ", "WHITESPACE", "PIDENTIFIER", "CHARACTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "language.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public languageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Declare_StartContext extends ProgramContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode VAR() { return getToken(languageParser.VAR, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(languageParser.BEGIN, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode END() { return getToken(languageParser.END, 0); }
		public TerminalNode EOF() { return getToken(languageParser.EOF, 0); }
		public Declare_StartContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterDeclare_Start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitDeclare_Start(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitDeclare_Start(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Nodeclare_StartContext extends ProgramContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(languageParser.BEGIN, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode END() { return getToken(languageParser.END, 0); }
		public TerminalNode EOF() { return getToken(languageParser.EOF, 0); }
		public Nodeclare_StartContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterNodeclare_Start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitNodeclare_Start(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitNodeclare_Start(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Declare_StartContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(20);
				possibleWhitespace();
				setState(21);
				match(VAR);
				setState(22);
				match(WHITESPACE);
				setState(23);
				declarations();
				setState(24);
				match(WHITESPACE);
				setState(25);
				match(BEGIN);
				setState(26);
				match(WHITESPACE);
				setState(27);
				commands(0);
				setState(28);
				match(END);
				setState(30);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(29);
					match(EOF);
					}
					break;
				}
				}
				break;
			case 2:
				_localctx = new Nodeclare_StartContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(32);
				possibleWhitespace();
				setState(33);
				match(BEGIN);
				setState(34);
				match(WHITESPACE);
				setState(35);
				commands(0);
				setState(36);
				match(END);
				setState(38);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(37);
					match(EOF);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	 
		public DeclarationsContext() { }
		public void copyFrom(DeclarationsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Put_Symbol1Context extends DeclarationsContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public TerminalNode COMMA() { return getToken(languageParser.COMMA, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public Put_Symbol1Context(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterPut_Symbol1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitPut_Symbol1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitPut_Symbol1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Put_Symbol2Context extends DeclarationsContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public Put_Symbol2Context(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterPut_Symbol2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitPut_Symbol2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitPut_Symbol2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Put_Table2Context extends DeclarationsContext {
		public Token left;
		public Token right;
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public TerminalNode LSQBRACKET() { return getToken(languageParser.LSQBRACKET, 0); }
		public TerminalNode RSQBRACKET() { return getToken(languageParser.RSQBRACKET, 0); }
		public List<TerminalNode> NUM() { return getTokens(languageParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(languageParser.NUM, i);
		}
		public Put_Table2Context(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterPut_Table2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitPut_Table2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitPut_Table2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Put_Table1Context extends DeclarationsContext {
		public Token left;
		public Token right;
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public TerminalNode LSQBRACKET() { return getToken(languageParser.LSQBRACKET, 0); }
		public TerminalNode RSQBRACKET() { return getToken(languageParser.RSQBRACKET, 0); }
		public TerminalNode COMMA() { return getToken(languageParser.COMMA, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public List<TerminalNode> NUM() { return getTokens(languageParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(languageParser.NUM, i);
		}
		public Put_Table1Context(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterPut_Table1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitPut_Table1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitPut_Table1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new Put_Table1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				possibleWhitespace();
				setState(43);
				match(PIDENTIFIER);
				setState(44);
				match(LSQBRACKET);
				setState(45);
				((Put_Table1Context)_localctx).left = match(NUM);
				setState(46);
				match(T__0);
				setState(47);
				((Put_Table1Context)_localctx).right = match(NUM);
				setState(48);
				match(RSQBRACKET);
				setState(49);
				match(COMMA);
				setState(50);
				match(WHITESPACE);
				setState(51);
				declarations();
				}
				break;
			case 2:
				_localctx = new Put_Symbol1Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				possibleWhitespace();
				setState(54);
				match(PIDENTIFIER);
				setState(55);
				match(COMMA);
				setState(56);
				match(WHITESPACE);
				setState(57);
				declarations();
				}
				break;
			case 3:
				_localctx = new Put_Table2Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				possibleWhitespace();
				setState(60);
				match(PIDENTIFIER);
				setState(61);
				match(LSQBRACKET);
				setState(62);
				((Put_Table2Context)_localctx).left = match(NUM);
				setState(63);
				match(T__0);
				setState(64);
				((Put_Table2Context)_localctx).right = match(NUM);
				setState(65);
				match(RSQBRACKET);
				}
				break;
			case 4:
				_localctx = new Put_Symbol2Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				possibleWhitespace();
				setState(68);
				match(PIDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandsContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterCommands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitCommands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitCommands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandsContext commands() throws RecognitionException {
		return commands(0);
	}

	private CommandsContext commands(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CommandsContext _localctx = new CommandsContext(_ctx, _parentState);
		CommandsContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_commands, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(73);
			command();
			setState(74);
			match(WHITESPACE);
			}
			_ctx.stop = _input.LT(-1);
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new CommandsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_commands);
					setState(76);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(77);
					command();
					setState(78);
					match(WHITESPACE);
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	 
		public CommandContext() { }
		public void copyFrom(CommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Repeat_StatementContext extends CommandContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode REPEAT() { return getToken(languageParser.REPEAT, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode UNTIL() { return getToken(languageParser.UNTIL, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(languageParser.SEMICOLON, 0); }
		public Repeat_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterRepeat_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitRepeat_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitRepeat_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class For_StatementContext extends CommandContext {
		public ValueContext v1;
		public ValueContext v2;
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode FOR() { return getToken(languageParser.FOR, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public TerminalNode PIDENTIFIER() { return getToken(languageParser.PIDENTIFIER, 0); }
		public TerminalNode FROM() { return getToken(languageParser.FROM, 0); }
		public TerminalNode DO() { return getToken(languageParser.DO, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode ENDFOR() { return getToken(languageParser.ENDFOR, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode TO() { return getToken(languageParser.TO, 0); }
		public TerminalNode DOWNTO() { return getToken(languageParser.DOWNTO, 0); }
		public For_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterFor_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitFor_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitFor_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Write_StatementContext extends CommandContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode WRITE() { return getToken(languageParser.WRITE, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(languageParser.SEMICOLON, 0); }
		public Write_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterWrite_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitWrite_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitWrite_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class If_StatementContext extends CommandContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode IF() { return getToken(languageParser.IF, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(languageParser.THEN, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public If_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterIf_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitIf_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitIf_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Read_StatementContext extends CommandContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode READ() { return getToken(languageParser.READ, 0); }
		public TerminalNode WHITESPACE() { return getToken(languageParser.WHITESPACE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(languageParser.SEMICOLON, 0); }
		public Read_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterRead_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitRead_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitRead_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Assign_StatementContext extends CommandContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public TerminalNode ASSIGN() { return getToken(languageParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(languageParser.SEMICOLON, 0); }
		public Assign_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterAssign_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitAssign_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitAssign_Statement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class While_StatementContext extends CommandContext {
		public PossibleWhitespaceContext possibleWhitespace() {
			return getRuleContext(PossibleWhitespaceContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(languageParser.WHILE, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(languageParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(languageParser.WHITESPACE, i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode DO() { return getToken(languageParser.DO, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode ENDWHILE() { return getToken(languageParser.ENDWHILE, 0); }
		public While_StatementContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).enterWhile_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof languageListener ) ((languageListener)listener).exitWhile_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof languageVisitor ) return ((languageVisitor<? extends T>)visitor).visitWhile_Statement(this);
